--- a/Frontend/src/locales/mk/translation.json
+++ b/Frontend/src/locales/mk/translation.json
@@ -7,5 +7,49 @@
         "AboutUs": "За нас",
         "OurLocation": "Локација",
         "Contact": "Контакт"
+    },
+    "footer": {
+        "Contact": "Контакт",
+        "Politics": "Политика на приватност",
+        "Privacy": "Приватност"
+    },
+    "Home": {
+        "Vision": "Овозможуваме на секој сопственик, изнајмувач и инвеститор да ја пронајде и обезбеди својата идеална недвижнина.",
+        "MoreInfo": "Повеќе инфо",
+        "EstatesByCategory": "Недвижнини по категорија",
+        "LookingProperty": "Барате недвижнина која моментално ја немаме?",
+        "LookingPropertyInfo": "Внесете ги информациите за недвижнината која ја барате и ќе ве контактираат соодветните агениции доколку се појави нова недвижнана која е иста или слична со информациите внесени од ваша страна.",
+        "EnterInformation": "Внесете информации",
+        "YourOffer": "Имате недвижнина која сакате да ја понудите?",
+        "YourOfferInfo": "Внесете ги информациите за недвижнината која ја нудите и ќе ве контактираат соодветните агениции за вашата недвижнина.",
+        "Contact" : "Вие сте агенција, и сакате да ги објавите вашите недвижнини на нашата страница?",
+        "ContactUs": "Стапете во контакт со нас"
+    },
+    "AboutUs": {
+        "AboutUs": "За нас",
+        "Intro" : "Добредојдовте на нашата платформа за недвижности, каде што наоѓањето или објавувањето на имот повеќе не е мака, туку искуство прилагодено за вас. Единствена дестинација што ги зближува агенциите, сопствениците и купувачите под еден дигитален покрив.",
+        "ExploreListings": "Прелистајте постојано растечкиот каталог на домови, станови и комерцијални простори. Секој запис покажува категорија, тип на имот, агенција, локација, површина и друго. Користете моќни филтри - по локација, ценовен опсег, квадратни метри за веднаш да најдете тоа што го барате.",
+        "DeepDetails": "Кликнете на кој било оглас за да видите слики со висока резолуција, информации за контакт на агенцијата и опис.",
+        "ListYourProperty": "Продавате или изнајмувате? Едноставно пополнете ја нашата интуитивна форма со деталите за вашиот имот, прикачете фотографии, а потоа потврдете го вашиот идентитет преку код испратен по е-пошта. Со двофакторска верификација, само легитимните огласи се објавуваат.",
+        "CustomAlert": "Барате нешто уникатно? Кажете ни што ви потреба - локација, распоред, буџет - и ќе ве известиме во моментот кога соодветна недвижнана ќе се појави во нашата база на податоци. Повторно, двофакторската автентикација гарантира дека стапуваме во контакт до вистински луѓе со вистински барања."
+    },
+    "Contact": {
+        "ContactUs": "Контактирајте не",
+        "ContactInfo": "Ако сте агенција и саката да ги објавувате вашите недвижнини на нашиот вебсајт, слободно стапете во контакт со нас преку телофонски повик или е-пошта.",
+        "Telephone": "Телефонски број: ",
+        "Email": "Е-пошта контакт форма:",
+        "Submit": "Испрати"
+    },
+    "form": {
+        "name": "име",
+        "email": "е-пошта",
+        "subject": "тема",
+        "body": "тело"
+    },
+    "error": {
+        "Error": "Грешка",
+        "ErrorInfo": "Ве молиме пополнете ги задолжителните празни полиња или поправете ги потодаците што ги внесовте каде што не поминува валидацијата!",
+        "Required": "Полето е задолжително",
+        "Email": "Невалидна e-пошта"
     }
 }
