--- a/Frontend/src/locales/mk/translation.json
+++ b/Frontend/src/locales/mk/translation.json
@@ -13,6 +13,40 @@
         "Politics": "Политика на приватност",
         "Privacy": "Приватност"
     },
+    "form": {
+        "name": "име",
+        "email": "е-пошта",
+        "subject": "тема",
+        "body": "тело",
+        "telephone": "телефон",
+        "maxPrice": "максимална сума",
+        "purchaseType": "имот за",
+        "estateType": "Бид на имот",
+        "areaFrom": "од m²",
+        "areaTo": "до m²",
+        "country": "држава",
+        "location": "локација/град/општина",
+        "terrace": "тераса",
+        "heating": "парно греење",
+        "parking": "паркинг",
+        "elevator": "лифт",
+        "yearConstruction": "година на градба",
+        "floorFrom": "од кат",
+        "floorTo": "до кат",
+        "rooms": "број на соби",
+        "message": "порака"
+    },
+    "error": {
+        "Error": "Грешка",
+        "ErrorInfo": "Ве молиме пополнете ги задолжителните празни полиња или поправете ги потодаците што ги внесовте каде што не поминува валидацијата!",
+        "Required": "Полето е задолжително",
+        "Email": "Невалидна e-пошта",
+        "GT0": "Бројот треба да биде поголем од 0",
+        "Select": "Мора да изберете вредност во полето",
+        "NonNegative": "Бројот не може да има негативна вредност",
+        "AreaFrom": "Од m² не може да ја надминува вредноста на до m²",
+        "FloorFrom": "Од кат не може да ја надминува вредноста на до кат"
+    },
     "Home": {
         "Vision": "Овозможуваме на секој сопственик, изнајмувач и инвеститор да ја пронајде и обезбеди својата идеална недвижнина.",
         "MoreInfo": "Повеќе инфо",
@@ -24,6 +58,13 @@
         "YourOfferInfo": "Внесете ги информациите за недвижнината која ја нудите и ќе ве контактираат соодветните агениции за вашата недвижнина.",
         "Contact" : "Вие сте агенција, и сакате да ги објавите вашите недвижнини на нашата страница?",
         "ContactUs": "Стапете во контакт со нас"
+    },
+    "LookingProperty": {
+        "LookingProperty": "Барате имот",
+        "Intro": "Ве молиме пополнете го формуларот со податоци за тоа каков имот барате, а соодветната агеницја ќе ве контактира доколку се појави таква понуда.",
+        "PersonData": "Податоци за барателот на имот:",
+        "EstateData": "Податоци за тоа каков имот барате:",
+        "Submit": "Испрати"
     },
     "AboutUs": {
         "AboutUs": "За нас",
@@ -39,17 +80,5 @@
         "Telephone": "Телефонски број: ",
         "Email": "Е-пошта контакт форма:",
         "Submit": "Испрати"
-    },
-    "form": {
-        "name": "име",
-        "email": "е-пошта",
-        "subject": "тема",
-        "body": "тело"
-    },
-    "error": {
-        "Error": "Грешка",
-        "ErrorInfo": "Ве молиме пополнете ги задолжителните празни полиња или поправете ги потодаците што ги внесовте каде што не поминува валидацијата!",
-        "Required": "Полето е задолжително",
-        "Email": "Невалидна e-пошта"
     }
 }
