--- a/Frontend/src/locales/mk/translation.json
+++ b/Frontend/src/locales/mk/translation.json
@@ -25,7 +25,8 @@
         "areaFrom": "од m²",
         "areaTo": "до m²",
         "country": "држава",
-        "location": "локација/град/општина",
+        "city": "град",
+        "municipality": "општина",
         "terrace": "тераса",
         "heating": "парно греење",
         "parking": "паркинг",
@@ -33,8 +34,14 @@
         "yearConstruction": "година на градба",
         "floorFrom": "од кат",
         "floorTo": "до кат",
+        "basement": "подрум",
         "rooms": "број на соби",
-        "message": "порака"
+        "message": "порака",
+        "address": "адреса на имотот",
+        "price": "цена",
+        "area": "површина m²",
+        "floor": "кат",
+        "images": "прикачи слики"
     },
     "error": {
         "Error": "Грешка",
@@ -64,6 +71,13 @@
         "Intro": "Ве молиме пополнете го формуларот со податоци за тоа каков имот барате, а соодветната агеницја ќе ве контактира доколку се појави таква понуда.",
         "PersonData": "Податоци за барателот на имот:",
         "EstateData": "Податоци за тоа каков имот барате:",
+        "Submit": "Испрати"
+    },
+    "YourOffer": {
+        "YourOffer": "Ваша понуда",
+        "Intro": "Ве молиме пополнете го формуларот со податоците за вашиот имот што го нудите, а соодветната агеницја ќе ве контактира според локацијата на имотот.",
+        "PersonData": "Понудувач на имот:",
+        "EstateData": "Информации за вашиот имот:",
         "Submit": "Испрати"
     },
     "AboutUs": {
