--- a/Frontend/src/locales/mk/translation.json
+++ b/Frontend/src/locales/mk/translation.json
@@ -43,6 +43,20 @@
         "floor": "кат",
         "images": "прикачи слики"
     },
+    "option": {
+        "Select": "Избери",
+        "Yes": "Да",
+        "No": "Не",
+        "Macedonia": "Македонија",
+        "House": "Куќа",
+        "Apartment": "Апартман",
+        "Office": "Канцеларија",
+        "Shop": "Дуќан",
+        "Werehouse": "Магацин",
+        "Land": "Плац",
+        "Purchase": "Купување",
+        "Rent": "Издавање"
+    },
     "error": {
         "Error": "Грешка",
         "ErrorInfo": "Ве молиме пополнете ги задолжителните празни полиња или поправете ги потодаците што ги внесовте каде што не поминува валидацијата!",
