--- a/Frontend/src/locales/mk/translation.json
+++ b/Frontend/src/locales/mk/translation.json
@@ -1,11 +1,14 @@
 {
+    "header":{
+        "Menu": "Мени"
+    },
     "navigation": {
         "Home": "Дома",
         "RealEstate": "Недвижнини",
         "LookingProperty": "Барате имот",
         "YourOffer": "Ваша понуда",
         "AboutUs": "За нас",
-        "OurLocation": "Локација",
+        "Agencies": "Агенции",
         "Contact": "Контакт"
     },
     "footer": {
@@ -94,6 +97,16 @@
         "EstateData": "Информации за вашиот имот:",
         "Submit": "Испрати"
     },
+    "Agencies": {
+        "Agencies": "Агенции",
+        "Country": "Држава",
+        "Contact": "Контактирај Агениција",
+        "Telephones": "Телефон броеви:",
+        "Email": "Е-пошта:",
+        "Estates": "Недвижнини:",
+        "NoEstates": "Број на недвижнини објавено:",
+        "Description": "Опис"
+    },
     "AboutUs": {
         "AboutUs": "За нас",
         "Intro" : "Добредојдовте на нашата платформа за недвижности, каде што наоѓањето или објавувањето на имот повеќе не е мака, туку искуство прилагодено за вас. Единствена дестинација што ги зближува агенциите, сопствениците и купувачите под еден дигитален покрив.",
@@ -108,5 +121,8 @@
         "Telephone": "Телефонски број: ",
         "Email": "Е-пошта контакт форма:",
         "Submit": "Испрати"
+    },
+    "Country": {
+        "Macedonia": "Македонија"
     }
 }
