--- a/Frontend/src/locales/mk/translation.json
+++ b/Frontend/src/locales/mk/translation.json
@@ -58,7 +58,8 @@
         "Werehouse": "Магацин",
         "Land": "Плац",
         "Purchase": "Купување",
-        "Rent": "Издавање"
+        "Rent": "Издавање",
+        "ShortPeriod": "Краток престој"
     },
     "error": {
         "Error": "Грешка",
