--- a/Frontend/src/locales/mk/translation.json
+++ b/Frontend/src/locales/mk/translation.json
@@ -46,6 +46,17 @@
         "floor": "кат",
         "images": "прикачи слики"
     },
+    "filter": {
+        "estateFor": "недвижнина за",
+        "estateType": "тип на недвижнина",
+        "fromArea": "од m²",
+        "toArea": "до m²",
+        "country": "држава",
+        "city": "град",
+        "fromPrice": "од цена",
+        "toPrice": "до цена",
+        "agency": "агеницја"
+    },
     "option": {
         "Select": "Избери",
         "Yes": "Да",
@@ -83,6 +94,19 @@
         "YourOfferInfo": "Внесете ги информациите за недвижнината која ја нудите и ќе ве контактираат соодветните агениции за вашата недвижнина.",
         "Contact" : "Вие сте агенција, и сакате да ги објавите вашите недвижнини на нашата страница?",
         "ContactUs": "Стапете во контакт со нас"
+    },
+    "RealEstate": {
+        "Estates": "Недвижнини",
+        "OpenFilter": "Отвори филтер",
+        "EstateFor": "Недвижнина за:",
+        "EstateType": "тип на недвижнина",
+        "Agency": "Агенција:",
+        "Country": "Држава",
+        "Location": "Локација:",
+        "Area": "Површина:",
+        "Price": "Цена:",
+        "Submit": "Филтрирај",
+        "RowsPerPage": "Редови по страница:"
     },
     "LookingProperty": {
         "LookingProperty": "Барате имот",
@@ -125,5 +149,18 @@
     },
     "Country": {
         "Macedonia": "Македонија"
+    },
+    "Estate": {
+        "House": "Куќа",
+        "Apartment": "Апартман",
+        "Office": "Канцеларија",
+        "Shop": "Дуќан",
+        "Werehouse": "Магацин",
+        "Land": "Плац"
+    },
+    "Purchase": {
+        "Purchase": "Купување",
+        "Rent": "Издавање",
+        "ShortPeriod": "Краток престој"
     }
 }
