--- a/Frontend/src/locales/mk/translation.json
+++ b/Frontend/src/locales/mk/translation.json
@@ -44,7 +44,7 @@
         "price": "цена",
         "area": "површина m²",
         "floor": "кат",
-        "images": "прикачи слики (прикачите повеќе слики одеднаш)",
+        "images": "прикачи слики (прикачете повеќе слики одеднаш)",
         "published": "објавено на"
     },
     "filter": {
