GetEstateDetails service and test implemented

--- a/Frontend/src/locales/en/translation.json
+++ b/Frontend/src/locales/en/translation.json
@@ -109,6 +109,7 @@
         "Submit": "Filter",
         "RowsPerPage": "Rows per page:",
         "Description": "Description",
+        "Estate": "Estate",
         "General": "General information",
         "Financial": "Financial information",
         "Additional": "Additional information",
