--- a/Frontend/src/locales/mk/translation.json
+++ b/Frontend/src/locales/mk/translation.json
@@ -109,6 +109,7 @@
         "Submit": "Филтрирај",
         "RowsPerPage": "Редови по страница:",
         "Description": "Опис",
+        "Estate": "Недвижнина",
         "General": "Општи информации",
         "Financial": "Финансиски информации",
         "Additional": "Дополнителни информации",
