Add Profile section

--- a/Frontend/src/locales/en/translation.json
+++ b/Frontend/src/locales/en/translation.json
@@ -10,7 +10,12 @@
         "AboutUs": "About us",
         "Agencies": "Agencies",
         "Contact": "Contact"
-    },    
+    },
+    "profile": {
+        "Profile": "Profile",
+        "YourEstates": "Your estates",
+        "Logout": "Logout"
+    },
     "footer": {
         "Contact": "Contact",
         "Politics": "Privacy politics",
