--- a/Frontend/src/locales/mk/translation.json
+++ b/Frontend/src/locales/mk/translation.json
@@ -87,7 +87,8 @@
         "Select": "Мора да изберете вредност во полето",
         "NonNegative": "Бројот не може да има негативна вредност",
         "AreaFrom": "Од m² не може да ја надминува вредноста на до m²",
-        "FloorFrom": "Од кат не може да ја надминува вредноста на до кат"
+        "FloorFrom": "Од кат не може да ја надминува вредноста на до кат",
+        "Images": "Само дадотеки во формат на слики е дозволено"
     },
     "Home": {
         "Vision": "Овозможуваме на секој сопственик, изнајмувач и инвеститор да ја пронајде и обезбеди својата идеална недвижнина.",
@@ -142,7 +143,8 @@
         "Email": "Е-пошта:",
         "Estates": "Недвижнини:",
         "NoEstates": "Број на недвижнини објавено:",
-        "Description": "Опис"
+        "Description": "Опис",
+        "Add": "Додади"
     },
     "AboutUs": {
         "AboutUs": "За нас",
