--- a/Frontend/src/locales/mk/translation.json
+++ b/Frontend/src/locales/mk/translation.json
@@ -50,7 +50,13 @@
         "area": "површина m²",
         "floor": "кат",
         "images": "прикачи слики (прикачете повеќе слики одеднаш)",
-        "published": "објавено на"
+        "published": "објавено на",
+        "title": "наслов",
+        "description": "опис",
+        "additionalInfo": "дополнителна информација",
+        "oldPassword": "лозинка",
+        "newPassword": "нова лозинка",
+        "confirmPassword": "потврди новата лозинка"
     },
     "filter": {
         "estateFor": "недвижнина за",
@@ -88,7 +94,8 @@
         "NonNegative": "Бројот не може да има негативна вредност",
         "AreaFrom": "Од m² не може да ја надминува вредноста на до m²",
         "FloorFrom": "Од кат не може да ја надминува вредноста на до кат",
-        "Images": "Само дадотеки во формат на слики е дозволено"
+        "Images": "Само дадотеки во формат на слики е дозволено",
+        "ConfirmPassword": "потврди лозинка не се софпаѓа со новата лозинка"
     },
     "Home": {
         "Vision": "Овозможуваме на секој сопственик, изнајмувач и инвеститор да ја пронајде и обезбеди својата идеална недвижнина.",
@@ -119,7 +126,19 @@
         "General": "Општи информации",
         "Financial": "Финансиски информации",
         "Additional": "Дополнителни информации",
-        "AgencyInfo": "Инфо за агенцијата"
+        "AgencyInfo": "Инфо за агенцијата",
+        "YourEstates": "Твои недвижнини",
+        "YourEstatesForm": "Форма за недвижнина",
+        "GeneralInfo": "Општи информации",
+        "DescriptionInfo": "Опис информација",
+        "LocationInfo": "Информации за локација",
+        "AdditionalInfo": "Дополнителни информации",
+        "ImagesInfo": "Информации за слики",
+        "AddCity": "Додади град",
+        "SelectCity": "Одбери град",
+        "Add": "Додади",
+        "Remove": "Избриши",
+        "Save": "Зачувај"
     },
     "LookingProperty": {
         "LookingProperty": "Барате имот",
@@ -144,7 +163,14 @@
         "Estates": "Недвижнини:",
         "NoEstates": "Број на недвижнини објавено:",
         "Description": "Опис",
-        "Add": "Додади"
+        "Profile": "Твој профил",
+        "Add": "Додади",
+        "Remove": "Избриши",
+        "Save": "Зачувај",
+        "Close": "Затвори",
+        "ChangePassword": "Промени лозинка",
+        "UpdatePassword": "Зачувај нова лозинка",
+        "NumberOfEstates": "Број на објавени недвижнини"
     },
     "AboutUs": {
         "AboutUs": "За нас",
