--- a/Frontend/src/locales/en/translation.json
+++ b/Frontend/src/locales/en/translation.json
@@ -39,7 +39,7 @@
         "heating": "heating",
         "parking": "parking",
         "elevator": "elevator",
-        "yearConstruction": "year of construction",
+        "yearOfConstruction": "year of construction",
         "floorFrom": "floor from",
         "floorTo": "floor to",
         "rooms": "number of rooms",
@@ -73,6 +73,7 @@
         "Select": "Select",
         "Yes": "Yes",
         "No": "No",
+        "None": "None",
         "Macedonia": "Macedonia",
         "House": "House",
         "Apartment": "Apartment",
