--- a/Frontend/src/locales/mk/translation.json
+++ b/Frontend/src/locales/mk/translation.json
@@ -39,7 +39,7 @@
         "heating": "парно греење",
         "parking": "паркинг",
         "elevator": "лифт",
-        "yearConstruction": "година на градба",
+        "yearOfConstruction": "година на градба",
         "floorFrom": "од кат",
         "floorTo": "до кат",
         "basement": "подрум",
@@ -73,6 +73,7 @@
         "Select": "Избери",
         "Yes": "Да",
         "No": "Не",
+        "None": "Нема",
         "Macedonia": "Македонија",
         "House": "Куќа",
         "Apartment": "Апартман",
