--- a/Frontend/src/locales/mk/translation.json
+++ b/Frontend/src/locales/mk/translation.json
@@ -21,6 +21,10 @@
         "Politics": "Политика на приватност",
         "Privacy": "Приватност"
     },
+    "code": {
+        "Enter": "Внеси верифкациски код",
+        "Verify": "Провери"
+    },
     "form": {
         "name": "име",
         "email": "е-пошта",
@@ -190,6 +194,9 @@
     },
     "Country": {
         "Macedonia": "Македонија"
+    },
+    "Login": {
+        "Login": "Најави се"
     },
     "Estate": {
         "House": "Куќа",
