--- a/Frontend/src/locales/en/translation.json
+++ b/Frontend/src/locales/en/translation.json
@@ -60,7 +60,9 @@
         "additionalInfo": "additional info",
         "oldPassword": "password",
         "newPassword": "new password",
-        "confirmPassword": "confirm new password"
+        "confirmPassword": "confirm new password",
+        "username": "username",
+        "password": "лозинка"
     },
     "filter": {
         "estateFor": "estate for",
