--- a/Frontend/src/locales/en/translation.json
+++ b/Frontend/src/locales/en/translation.json
@@ -62,7 +62,7 @@
         "newPassword": "new password",
         "confirmPassword": "confirm new password",
         "username": "username",
-        "password": "лозинка"
+        "password": "password"
     },
     "filter": {
         "estateFor": "estate for",
